# mlx-whisper-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_output.md
mlx_whisper_pipeline/: __init__.py  cli.py  prompts.py  refine.py  transcribe.py
tests/: test_cli.py  test_prompts.py  test_refine.py  test_transcribe.py
