[project]
name = "mlx-whisper-pipeline"
version = "0.3.0"
description = "Apple Silicon ローカル AI 文字起こし + Claude 整文パイプライン (Claude Code / 100+ provider via litellm)"
authors = [{ name = "Tomonori Ishida", email = "tomonet0615@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["whisper", "mlx", "claude", "transcription", "apple-silicon"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx-whisper>=0.4",
]

[project.optional-dependencies]
api = ["litellm>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
mlx-whisper-pipeline = "mlx_whisper_pipeline.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_whisper_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
